app/assets/stylesheets/navbar.css
header {
  display: flex;
  align-items: center;
  height: 60px;
  padding: 11px 20px;
  gap: 16px;
}

#logo {
  width: 132px;
  height: 38px;
}

#beta {
  border: 1px solid var(--brown);
  padding: 4px 9px 3px 9px;
  margin-left: 5px;
}

#burger {
  display: flex;
  gap: 10.5px;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: none;
  border: none;
  z-index: 999;
  padding: 9px 2px;
}

#burger span {
  width: 38px;
  height: 1px;
  background-color: #868686;
}

#burger span:nth-child(2) {
  background-color: var(--green);
}

#burger.active {
  position: fixed;
  right: 20px;
}

#burger.active span:nth-child(1) {
  transform: translateY(18px) rotate(45deg);
}

#burger.active span:nth-child(2) {
  opacity: 0;
}

#burger.active span:nth-child(3) {
  transform: translateY(-5px) rotate(-45deg);
}

#search-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: calc(100% - 170px);
}

#search-wrapper {
  display: none;
  background-color: var(--white);
  border-radius: 0 0 5px 5px;
  border-bottom: 1px solid #989e9a;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
}

#search-form {
  display: flex;
  padding: 8px 20px 7px 20px;
}

#search-field {
  background-color: transparent;
  width: 100%;
  border: none;
}

#search-field:focus {
  outline: none;
}

#search-results {
  border-top: 0.5px solid #989e9a;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.search-results-link-container {
  height: auto;
  border: 0.5px solid #989e9a;
  width: 100%;
}

.search-results-link {
  padding: 15px 20px 15px 20px;
  text-decoration: none;
  display: block;
}

.extend {
  z-index: 999;
  display: block !important;
  position: absolute;
  top: 59px;
  left: 2px;
  right: 2px;
  width: calc(100% - 4px);
}

nav {
  display: flex;
}

#nav-menu {
  display: none;
}

#nav-menu.active {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 2px solid var(--dark-green);
  background-color: var(--white);
  z-index: 999;
  padding-top: 90px;
  padding-bottom: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  list-style-type: none;
}

#add-place-link {
  gap: 5px;
  font-size: 18px;
}

#sign-in-link {
  height: 42px;
  border-radius: 20px;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  line-height: 100%;
  padding: 13px 21px 13px 21px;
  font-size: 18px;
}

#account-icon {
  display: none;
}

.dropdown {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  font-size: 18px;
}

#logout-link {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 145px;
  height: 42px;
  border-radius: 20px;
  border: 1px solid #989e9a;
  padding: 8px 21px 7.33px 21px;
}

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

@media (min-width: 1024px) {
  header {
    padding: 16px 48px;
    height: 70px;
  }

  #search-container {
    justify-content: center;
    flex-direction: row-reverse;
    margin-left: 211px;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 400px;
    border: none;
    position: relative;
    padding-left: 10px;
    border-radius: 0;
    box-shadow: none;
  }

  #search-form {
    height: 100%;
    padding: 0;
  }

  #search-field {
    height: 50px;
  }

  #search-field::placeholder {
    opacity: 0.8;
    color: #989e9a;
    font-size: 18px;
    font-weight: 400;
  }

  .search-results-link-container {
    border-top: 1px solid #989e9a;
    border-left: 1px solid #989e9a;
    border-right: 1px solid #989e9a;
    border-bottom: none;
  }

  .search-results-link-container:last-of-type {
    border-bottom: 1px solid #989e9a;
  }

  #search-results {
    border-top: 0.5px solid #989e9a;
    z-index: 999;
    position: absolute;
    top: 45px;
    left: 0;
    padding: 0;
    border: none;
    width: 100%;
    background-color: var(--white);
  }

  .search-results-link {
    padding-left: 10px;
    border: none;
  }

  #burger {
    display: none;
  }

  #nav-menu {
    display: flex;
    gap: 32px;
    list-style-type: none;
    width: 667px;
    justify-content: flex-end;
  }

  .nav-link {
    display: flex;
    align-items: center;
  }

  .nav-link span {
    white-space: nowrap;
  }

  #nav-menu .session-links {
    height: 68px;
    border-top: none;
    border-right: none;
    border-bottom: none;
  }

  #add-place-link {
    gap: 2px;
  }

  .wrapper {
    position: relative;
    display: inline-block;
  }

  #account-icon {
    display: block;
  }

  .dropdown {
    display: none;
    position: absolute;
    right: 0;
    border-radius: 0 0 10px 10px;
    background: var(--white);
    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.25);
    padding: 8px 16px 19px 16px;
    font-size: 18px;
    width: 106px;
    height: 84px;
    z-index: 1;
  }

  .wrapper:hover .dropdown {
    display: flex;
    align-items: center;
    gap: 8px;
  }

  #logout-link {
    border: none;
    padding: 0;
    justify-content: center;
  }

  #logout-icon {
    display: none;
  }
}

